--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://88tvvf.csb.app",
+  "url": "https://imran146.github.io/ton",
   "name": "TON Boos",
-  "iconUrl": "https://88tvvf.csb.app/logo.png"
+  "iconUrl": "https://imran146.github.io/ton/logo.png"
 }
